# pdf-summarizer

./: README.md  pyproject.toml
pdf_summarizer/: summarizer.py
